tests/pass/test-if2.mc
int main()
{
  if (true) printf("%d\n", 42); else printf("%d\n", 8);
  printf("%d\n", 17);
  return 0;
}
